--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,8 @@ nav{
 }
 #info p{
 	font-size:16px;
-	letter-spacing: 1px!important;
+	letter-spacing: 0px!important;
+	margin-left: 1rem !important;
 }
 }
 /*intro*/
