--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,11 @@ html{
 }
 	
 /*header*/
+@media screen and (max-width: 768px){
+	.navbar-brand{
+		font-size:28px;
+	}
+}
 nav{
 	overflow: hidden;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2);
@@ -122,13 +127,13 @@ nav{
 
 }
 #info .author-info{	
-	position: absolute;
+	position:absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 }
 #info img{
-	background:red;
+	
 	height: 200px;
 	width: 200px;
 	border-radius: 200px;	
