--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ nav{
 @media screen and (max-width:768px){
 
 .counter-border-right{
-	border-right: 1px solid #FFFFFF;	
+	border-right: 1px solid #F8F9FA;	
 	}
 }
 @media screen and (max-width: 786px){
