--- a/css/style.css
+++ b/css/style.css
@@ -361,10 +361,10 @@ nav{
 	background: #9457eb;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.3);
 }
-#services .card:hover > i{	
-	color: #000;
-	transition: 0.35s  ease;
-	transform: translateY(-20%);
+#services .card:hover > img{	
+	
+	transition: 0.5s  ease;
+	transform: translateY(-15%);
 	
 }
 @media screen and (max-width: 768px){
