--- a/css/style.css
+++ b/css/style.css
@@ -93,21 +93,28 @@ html{
 }
 	
 /*header*/
+.navbar-toggler .fa-times{
+	display: none;
+}
 @media screen and (max-width: 768px){
 	.navbar-brand{
 		font-size:28px;
 	}
 }
 nav{
+
 	overflow: hidden;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2);
 }
 
 .navbar-toggler{
+
 	display: contents;	
 }
 .nav-link{
 	margin-left: 30px;
+	
+
 	
 }
 .nav-link:hover{
