--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,6 @@ html{
 .font-bu{
 	font-family: 'Baumans', cursive;
 }
-.font-fast{
-	font-family: 'Faster One', cursive;
-}
 .font-sar{
 	font-family: 'Saira Condensed', sans-serif;
 }
@@ -108,14 +105,11 @@ nav{
 }
 
 .navbar-toggler{
-
+	
 	display: contents;	
 }
 .nav-link{
 	margin-left: 30px;
-	
-
-	
 }
 .nav-link:hover{
 	color: #9457eb!important;
@@ -230,6 +224,7 @@ nav{
 	#completed-prj .info-backend{
 		font-size: 17px;
 	}
+
 }
 
 #completed-prj a{
@@ -406,6 +401,9 @@ nav{
 #swiper .swiper-slide p{
 	margin-top: 0.6rem;
 	font-size: 15px;
+}
+#swiper .swiper-slide img{
+	width: 120px;
 }
 
 }
