--- a/css/style.css
+++ b/css/style.css
@@ -135,16 +135,16 @@ nav{
 }
 #info img{
 	
-	height: 200px;
-	width: 200px;
-	border-radius: 200px;	
+	height: 190px;
+	width: 190px;
+	border-radius: 50%;	
 }
 @media screen and (max-width: 768px){	
 #info img{
 	background:red;
-	height: 190px;
-	width: 190px;
-	border-radius: 200px;	
+	height: 170px;
+	width: 170px;
+	border-radius: 50%;	
 }
 #info p{
 	font-size:16px;
