--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,52 @@
+/*defining css variables*/
+html{
+	--bg :#FDFDFD;
+	--bgc :#F8F9FA;
+	--bgf :#181819;
+	--bgn :#8B868B;
+	--bg-card:#fff;
+	--border: #EEE6E6;
+	--border-bottom:#000;
+	--color-muted:#181819;
+	
+}
+html[data-theme = 'dark']{
+	--bg :#202020;
+	--bgc :#2B2B2B;
+	--bgf :#fff;
+	--bgn :#949194;
+	--bg-card:#252525;
+	--border: #202020;
+	--border-bottom: #fff;
+	--color-muted:#97958C;
+	
+}
+.bg-light{
+	background: var(--bgc) !important;
+}
+.text-dark{
+	color: var(--bgf) !important;																																																																												 )
+}
+.nav-text{
+	color: var(--bgn) !important;
+}
+.bg-card{
+	background: var(--bg-card) !important;
+}
+.muted-text{
+	color: var(--color-muted) !important;
+}
 body{
 	margin: 0;
 	padding:0;
 	overflow-x: hidden;
-	background:#FDFDFD;	
+	background:var(--bg);	
 }
 html{
 	scroll-behavior: smooth;
 }
+
+
 /*global style classes*/
 .font-big-shoulder{
 	font-family: 'Big Shoulders Stencil Text', cursive;
@@ -119,6 +159,60 @@ nav{
 		margin-left:0px;
 	}
 }
+/*toggle checkbox*/
+input[type=checkbox]{
+	height: 0;
+	width: 0;
+	visibility: hidden;
+
+}
+
+label {
+	position: fixed;
+	z-index: 99;
+	top: 6rem;
+	right: 0.75rem;
+	cursor: pointer;
+	text-indent: -9999px;
+	width: 50px;
+	height: 25px;
+	background: #000;	
+	border-radius: 100px;
+	
+}
+
+label:after {
+	content: '';
+	position: absolute;
+	top: 3px;
+	left: 3px;
+	width: 18px;
+	height: 18px;
+	background: #fff;
+	border-radius: 90px;
+	transition: 0.3s;
+}
+
+input:checked + label {
+	background:#9457eb;
+}
+
+input:checked + label:after {
+	left: calc(100% - 5px);
+	transform: translateX(-100%);
+}
+
+label:active:after {
+	width: 43px;
+}
+
+html.transition,
+html.transition *,
+html.transition *:before,
+html.transition *:after {
+  transition: all 750ms !important;
+  transition-delay: 0 !important;
+}
 /*information*/
 #info{	
 	width: 100%;
@@ -187,12 +281,12 @@ nav{
 }
 /*counter*/
 .counter-border-right{
-	border-right: 1px solid #EEE6E6;
+	border-right: 1px solid var(--border);
 }
 @media screen and (max-width:768px){
 
 .counter-border-right{
-	border-right: 1px solid #F8F9FA;	
+	border:none;	
 	}
 }
 @media screen and (max-width: 786px){
@@ -231,28 +325,22 @@ nav{
 	text-decoration: none;
 }
 #completed-prj img{
-	box-shadow: 1px 2px 30px #999; 
+	
 	transition: all.3s;
 	border-radius: 5px;
 	width: 100%;
  	height: 296px; 
 }
 @media screen and (max-width: 768px){
-	#completed-prj img{
-	box-shadow: 1px 2px 30px #999; 
-	transition: all.3s;
-	border-radius: 5px;
-	width: 100%;
- 	height: 250px; 
-		}
+	
 }
 #completed-prj img:hover{
-	box-shadow: 2px 3px 50px #999;
+	
 	opacity: 0.5;	
 }
 #completed-prj .col-md-6{
 	margin-top: 3.5rem;
-	border-bottom: 1px solid #EEE6E6;
+	border-bottom: 1px solid var(--border);
 	padding-bottom: 2rem;
 }
 /*to-top*/
@@ -320,11 +408,12 @@ nav{
 /*contanct*/
 #contanct  input[type = text],
 #contanct  input[type = email]{
+	background: none;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	border:none;
-	border-bottom: 1px solid #000 !important;
+	border-bottom: 1px solid var(--border-bottom) !important;
 	margin-top: 50px;
 	width: 50%;
 	
