--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,20 @@ label {
 	border-radius: 100px;
 	
 }
+@media screen and (max-width: 768px){
+	label{
+		position: fixed;
+	z-index: 99;
+	top: 5rem;
+	right: 0.75rem;
+	cursor: pointer;
+	text-indent: -9999px;
+	width: 50px;
+	height: 25px;
+	background: #000;	
+	border-radius: 100px;
+	}
+}
 
 label:after {
 	content: '';
