--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,9 @@ html{
 .font-bar{
 	font-family: 'Barlow', sans-serif;
 }
-
+.font-15{
+	font-size: 15px;
+}
 .font-16{
 	font-size: 16px;
 }
@@ -159,7 +161,13 @@ nav{
 		margin-left:0px;
 	}
 }
-/*toggle F*/
+/*toggle checkbox*/
+#toggle-checkbox p {
+	position: absolute;
+	top: 6rem;
+	right: 4.5rem;
+}
+
 input[type=checkbox]{
 	height: 0;
 	width: 0;
@@ -174,8 +182,8 @@ label {
 	right: 0.75rem;
 	cursor: pointer;
 	text-indent: -9999px;
-	width: 50px;
-	height: 25px;
+	width: 48px;
+	height: 23px;
 	background: #000;	
 	border-radius: 100px;
 	
@@ -188,11 +196,17 @@ label {
 	right: 0.75rem;
 	cursor: pointer;
 	text-indent: -9999px;
-	width: 50px;
-	height: 25px;
+	width: 48px;
+	height: 23px;
 	background: #000;	
 	border-radius: 100px;
 	}
+
+#toggle-checkbox p {
+	position: absolute;
+	top: 5.1rem;
+	right: 4.35rem;
+}
 }
 
 label:after {
@@ -200,8 +214,8 @@ label:after {
 	position: absolute;
 	top: 3px;
 	left: 3px;
-	width: 18px;
-	height: 18px;
+	width: 16px;
+	height: 16px;
 	background: #fff;
 	border-radius: 90px;
 	transition: 0.3s;
@@ -217,7 +231,7 @@ input:checked + label:after {
 }
 
 label:active:after {
-	width: 43px;
+	width: 41px;
 }
 
 html.transition,
