--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
-
 body{
 	margin: 0;
 	padding:0;
 	overflow-x: hidden;
 	background:#FFFFFF;	
+	--custom-bg:#9457eb;
+	--custom-text:#9457eb;
 }
 html{
-	scroll-behavior: smooth;
-	--custom-text:#9457eb;
-	--custom-bg:#9457eb;
+	scroll-behavior: smooth;	
 }
 
 
@@ -49,7 +48,7 @@ html{
 .bg-light{
 	background: #FBFBFB!important;
 }
-.text-fav{
+.text-fav{		
 	color: var(--custom-text);
 }
 .bg-fav{
@@ -60,7 +59,7 @@ html{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	border-bottom: 3px solid var(--custom-bg)!important;
+	border-bottom: 3px solid var(--custom-bg);
 	
 }
 #cutom-border-2{
@@ -68,7 +67,7 @@ html{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	border-bottom: 3px solid var(--custom-bg)!important;
+	border-bottom: 3px solid var(--custom-bg);
 	margin-bottom: 0.4rem;
 	margin-top: 0px;
 }
@@ -79,7 +78,7 @@ html{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	border-bottom: 3px solid var(--custom-bg)!important;
+	border-bottom: 3px solid var(--custom-bg);
 	
 }
 #cutom-border-2{
@@ -87,7 +86,7 @@ html{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	border-bottom: 3px solid var(--custom-bg)!important;
+	border-bottom: 3px solid var(--custom-bg);
 	margin-bottom: 0.4rem;
 	margin-top: 0px;
 }
@@ -100,29 +99,24 @@ html{
 }
 	
 /*header*/
-.navbar-toggler .fa-times{
-	display: none;
-}
 @media screen and (max-width: 768px){
 	.navbar-brand{
 		font-size:28px;
 	}
 }
 nav{
-
 	overflow: hidden;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2);
 }
 
-.navbar-toggler{
-	
+.navbar-toggler{	
 	display: contents;	
 }
 .nav-link{
 	margin-left: 30px;
 }
 .nav-link:hover{
-	color: var(--custom-text)!important;
+	color: var(--custom-bg)!important;
 }
 @media screen and (max-width: 768px){
 	.nav-link{
@@ -223,8 +217,7 @@ nav{
 	}
 }
 /*completed projects*/
-#completed-prj button{
-	
+#completed-prj button{	
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
 	transition: 0.5s ease;
 }
@@ -248,9 +241,6 @@ nav{
 	border-radius: 5px;
 	width: 100%;
  	height: 296px; 
-}
-@media screen and (max-width: 768px){
-	
 }
 #completed-prj img:hover{
 	
@@ -340,7 +330,9 @@ nav{
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
 	transition: 0.5s ease;
 }
-
+#contanct button:hover{
+	background: var(--custom-bg);
+}
 @media screen and (max-width: 768px){
 	#contanct  input[type = text],
 	#contanct  input[type = email]{
@@ -419,9 +411,14 @@ nav{
 }
 
 }
-#customize button{
-	
+#customize button{	
  	border-radius: 50%;
+ 	transition: 0.5s ease;
+}
+#customize button:hover{
+	opacity: 0.7;
+	border: 1px solid #4B4949;
+	
 }
 #customize button:focus{
 	outline: none;
