--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ html{
 .font-30{
 	font-size: 30px;
 }
+.font-40{
+	font-size: 40px;
+}
 .bg-light{
 	background: #FBFBFB!important;
 }
@@ -101,7 +104,7 @@ html{
 /*header*/
 @media screen and (max-width: 768px){
 	.navbar-brand{
-		font-size:28px;
+		font-size:29px;
 	}
 }
 nav{
@@ -124,39 +127,57 @@ nav{
 	}
 }
 /*information*/
-#info{	
+#info{
 	width: 100%;
-	height: 100vh;
 	background-size: cover;
 	background-position: center;
-
-}
-#info .author-info{	
-	position:absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-}
-#info img{
 	
-	height: 190px;
-	width: 190px;
-	border-radius: 50%;	
+}
+#info .author-info{		
+	margin-top:7rem!important;
+}
+#info .author-info .author-info-text{
+	margin-top: 9rem!important;
+} 
+#info img{
+	max-width: 100%;	
+}
+
+#info button{
+
+	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
+	transition: 0.5s ease;
+}
+#info button:hover{
+	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.4);
+	transform: translate(-1%);
 }
 @media screen and (max-width: 768px){	
-#info img{
-	background:red;
-	height: 170px;
-	width: 170px;
-	border-radius: 50%;	
-}
-#info p{
-	font-size:16px;
-	letter-spacing: 0px!important;
-	margin-left: 1rem !important;
-}
+	#info img{	
+		margin-left: 15px!important;
+	}
+	#info p{	
+		letter-spacing: 0px!important;
+	}
+	#info .author-info .author-info-text{
+		margin-top: 2.2rem!important;
+	} 
+	#info .author-info{		
+		margin-top:5rem!important;
+	}
+	#info .upper-text{
+		font-size: 26px!important;
+	}
+	#info .lower-text{
+		font-size: 28px!important;
+	}
+	#info .extra-text{
+		font-size: 20px!important;
+	}
 }
 /*intro*/
+#intro{
+}
 #intro button{
 
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
@@ -167,6 +188,9 @@ nav{
 	transform: translate(-1%);
 }
 #intro img{
+	background-size: cover;
+	background-repeat:no-repeat;
+	background-position: center;
 	border-radius: 1px;
 }
 #intro .about-me{
