--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ html{
 	}
 }
 nav{
+	z-index: 99;
 	overflow: hidden;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2);
 }
@@ -389,7 +390,7 @@ nav{
 }
 #services .card:hover > img{	
 	
-	transition: 0.5s  ease;
+	transition: 1s  ease;
 	transform: translateY(-15%)  rotateY(360deg) ;
 
 	
@@ -405,7 +406,7 @@ nav{
 
 #services .card:hover > img{	
 	
-	transition: 1.6s  ease;
+	transition: 1.5s  ease;
 	transform:  rotateY(360deg);
 	
 }
