--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ nav{
 #completed-prj img{
 	box-shadow: 1px 2px 25px #999;
 	transition: all.3s;
-	border-radius: 5px;
+	border-radius: 3px;
 	width: 100%;
  	height: 296px; 
 }
@@ -277,6 +277,12 @@ nav{
 #completed-prj .col-md-6{
 	margin-top: 3.5rem;	
 	padding-bottom: 2rem;
+}
+@media screen and (max-width: 768px){
+
+	#completed-prj img{
+		height: 225px;
+	}
 }
 /*to-top*/
 .to-top{
