--- a/css/style.css
+++ b/css/style.css
@@ -234,21 +234,17 @@ nav{
     column-gap: 1.5rem;
 
 }
-.education_title{
-   
+.education_title{   
     font-weight: 500;
 }
 
 .education_subtitle{
-
-    display: inline-block;
-    
+    display: inline-block;    
     margin-bottom: 1rem;       
 }
 
-.education_calendar{
-  
-    color: var(--custom-text );
+.education_calendar{  
+    color: var(--custom-text);
 }
 
 .education_rounder{
@@ -467,7 +463,7 @@ nav{
 	}
 
 #services .card:hover > img{	
-	transform: translateY(0%)
+	transform: translateY(0%);
 }
 }
 /*swiper*/
