--- a/css/style.css
+++ b/css/style.css
@@ -228,16 +228,22 @@ nav{
 
 }
 /*education*/
+.education_sections{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
 .education_data{
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
-    column-gap: 1.5rem;
-
+    column-gap: 1rem;
 }
 .education_title{   
     font-weight: 500;
+    margin-top: 0.75rem;
+    
 }
-
 .education_subtitle{
     display: inline-block;    
     margin-bottom: 1rem;       
@@ -263,6 +269,7 @@ nav{
     transform: translate(6px , -7px);
 }
 @media screen and (max-width:768px){
+
 	.education_subtitle{
 		font-size: 14px;
 	}
@@ -271,6 +278,12 @@ nav{
 	}
 	.education_calendar{
 		font-size: 12px;
+	}
+}
+
+@media screen and (max-width:318px){
+	#education{
+		display: none;
 	}
 }
 /*counter*/
