--- a/css/style.css
+++ b/css/style.css
@@ -134,13 +134,6 @@ nav{
 	}
 }
 /*information*/
-#info{
-	
-	width: 100%;
-	background-size: cover;
-	background-position: center;
-
-}
 #info .author-info{		
 	margin-top:7rem!important;
 }
@@ -150,9 +143,7 @@ nav{
 #info img{
 	max-width: 100%;	
 }
-
 #info button{
-
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
 	transition: 0.5s ease;
 }
@@ -484,10 +475,12 @@ nav{
 	width: 140px;
 	height: 140px;
 	border-radius: 50%;
-
 }
 #swiper .swiper-slide{
  padding: 3rem 9rem;
+}
+#swiper .swiper-pagination-bullet{
+	background-color: var(--custom-bg);
 }
 @media screen and (max-width: 768px){
 
