--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,19 @@ body{
 	background:#FFFFFF;	
 	--custom-bg:#9457eb;
 	--custom-text:#9457eb;
+	
 }
 html{
 	scroll-behavior: smooth;	
 }
-
-
+::-webkit-scrollbar{
+	background: #F2F2F2;
+	width: 0.45rem;
+}
+::-webkit-scrollbar-thumb{
+	background: var(--custom-bg);
+	border-radius: 6px;
+}
 /*global style classes*/
 .font-big-shoulder{
 	font-family: 'Big Shoulders Stencil Text', cursive;
@@ -166,6 +173,8 @@ nav{
 	max-width: 100%;	
 }
 #info button{
+	animation-delay: 0.4s;
+	animation-duration:0.8s;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
 	transition: 0.5s ease;
 }
@@ -202,7 +211,8 @@ nav{
 /*intro*/
 
 #intro button{
-
+	animation-delay: 0.2s;
+	animation-duration:0.7s;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
 	transition: 0.5s ease;
 }
@@ -241,6 +251,10 @@ nav{
 
 }
 /*education*/
+.education h3,span{
+	animation-delay: 0.1s;
+	animation-duration:1.8s;
+}
 .education_sections{
 	display: flex;
 	justify-content: center;
@@ -440,7 +454,9 @@ nav{
 	width: 50%;
 	
 }
-#contact button{	
+#contact button{
+	animation-delay: 0.2s;
+	animation-duration:0.7s;	
 	border:none;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
 	transition: 0.5s ease;
@@ -525,9 +541,14 @@ nav{
 
 }
 /*customize*/
-#customize button{	
+#customize button{
+	animation-delay: 0.2s;
+	animation-duration:0.8s;
  	margin-right: 1rem;
  	transition: 0.5s ease;
+}
+#customize p{
+	animation-duration: 1.5s;
 }
 #customize button:hover{
 	opacity: 0.7;
