--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,12 @@ nav .active {
 #info img{
 	max-width: 100%;	
 }
+#info button{
+	animation-delay: 0.4s;
+	animation-duration:1s;
+	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
+	transition: 0.5s ease;
+}
 #info button:hover{
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.4);
 	transform: translate(-1%);
@@ -206,6 +212,12 @@ nav .active {
 }
 /*intro*/
 
+#intro button{
+	animation-delay: 0.2s;
+	animation-duration:0.7s;
+	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
+	transition: 0.5s ease;
+}
 #intro button:hover{
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.4);
 	transform: translate(-1%);
@@ -243,6 +255,10 @@ nav .active {
 
 }
 /*education*/
+.education h3,span{
+	animation-delay: 0.1s;
+	animation-duration:1.8s;
+}
 .education_sections{
 	display: flex;
 	justify-content: center;
@@ -442,10 +458,12 @@ nav .active {
 	width: 50%;
 	
 }
-#contact button{		
+#contact button{
+	animation-delay: 0.2s;
+	animation-duration:0.7s;	
 	border:none;
 	box-shadow: 0 1px 15px 0 rgba(0,0,25,0.2); 
-	
+	transition: 0.5s ease;
 }
 #contact button:hover{
 	background: var(--custom-bg);
@@ -527,9 +545,14 @@ nav .active {
 
 }
 /*customize*/
-#customize button{	
+#customize button{
+	animation-delay: 0.2s;
+	animation-duration:0.8s;
  	margin-right: 1rem;
- 
+ 	transition: 0.5s ease;
+}
+#customize p{
+	animation-duration: 1.5s;
 }
 #customize button:hover{
 	opacity: 0.7;
